--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,7 @@
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.warna {
+  text-shadow: 0 0 8px rgba(255, 255, 255);
+}
