update : validasion register, membuat componen posttingan, rewwtmodal dan rekomendasi follower dan commentar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,13 @@
   /* White text on hover */
 }
 
+:where(.css-dev-only-do-not-override-mc1tut).ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover, 
+:where(.css-dev-only-do-not-override-mc1tut).ant-btn-variant-dashed:not(:disabled):not(.ant-btn-disabled):hover {
+  color: #fff; /* Text color on hover */
+  border-color: #7a9c7a !important ;
+  background-color: #7a9c7a; /* Background color on hover */
+}
+
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
