--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,3 +54,35 @@
   scrollbar-width: none;
   /* Firefox */
 }
+
+/* Styling for Follower button */
+.follower-btn {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.follower-btn:hover {
+    background-color: #45a049;
+    cursor: pointer;
+}
+
+/* Styling for Unfollower button */
+.unfollower-btn {
+    background-color: #f44336;
+    color: white;
+    border: 1px solid #f44336;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.unfollower-btn:hover {
+    background-color: #e53935;
+    cursor: pointer;
+}
